@@ -42,6 +42,7 @@
     - ability to analyze, optimize and quick optimize drive from
       Explorer context menu added
     - relative log paths support added to both GUI and console interface
+    - support of Unicode strings added to GUI options
     - status bar MFT string removed from translations, since it is nearly
       impossible to translate due to space issues
     - the following translations were updated:
